# reshift

./: .doc-checks.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  ROADMAP.md  codecov.yml  coverage.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  studies  ty.toml
.github/workflows/: bumpversion.yml  ci.yml  docs.yml  pages.yml
app/: __init__.py  app.py
benchmarks/: __init__.py  m2_cpd_metrics.py  m2_plot.py  m2_table.tex  profile_decomposition.py
examples/: 00_ltv_control.ipynb  00_nonlinear_delay_control_model.ipynb  00_parameters influence.ipynb  00_varying_frequency_noise.ipynb  01_synthetic_steps.ipynb  02_nprs.ipynb  03_cats.ipynb  04_skab.ipynb  05_usp_ds.ipynb  06_bess_hvac.ipynb  07_eco_pack.ipynb  08_nonlinear_delay_control.ipynb  09_graphical_abstract.ipynb  10_baseline_cpdmd.ipynb  __init__.py  build_companion.py  config.py  cpdmd_compare.py  plant_residual_server.py  run-benchmarks.py  window_explorer.html
functions/: __init__.py  bayes_opt_parallel.py  chdsubid.py  datasets.py  dmd.py  metrics.py  plot.py  preprocessing.py  rolling.py
publications/: IEEEtran.cls  root.tex
publications/ECC26/: main.bib  root.tex
publications/ECC26/reviews/: CommentsToAuthor.txt  Review17285.txt  Review17291.txt  Review4213.txt  Review4215.txt  Review8067.txt  iThenticateScanResult.txt  response.md  revision-audit.md
publications/ESWA/review/: eaai.txt  eswa.txt  michal.txt
publications/ESWA/submission/: cover-letter.tex  orcid-info.tex
publications/IEEECSS/: IEEEtran.cls  main.bib  root.tex
publications/IEEECSS/reviews/: logical_issues_odmd.md
publications/IEEECSS/sections/: abstract.tex  conclusions.tex  introduction.tex  method-parameter_selection.tex  method.tex  notation.tex  results-sleep_stage.tex  theoretical_analysis.tex
publications/sections/: appendix_dmd.tex  introduction.tex  method.tex  notation.tex  preliminaries.tex  results.tex
reference/SUMMARY/: index.html
reference/app/: index.html
reference/app/app/: index.html
reference/benchmarks/: index.html
reference/benchmarks/m2_cpd_metrics/: index.html
reference/benchmarks/m2_plot/: index.html
reference/benchmarks/profile_decomposition/: index.html
reference/examples/: index.html
reference/examples/config/: index.html
reference/examples/cpdmd_compare/: index.html
reference/functions/: index.html
reference/functions/chdsubid/: index.html
reference/functions/datasets/: index.html
reference/functions/dmd/: index.html
reference/functions/metrics/: index.html
reference/functions/plot/: index.html
reference/functions/preprocessing/: index.html
reference/functions/rolling/: index.html
reference/reshift/: index.html
reference/reshift/chdsubid/: index.html
reference/reshift/datasets/: index.html
reference/reshift/dmd/: index.html
reference/reshift/metrics/: index.html
reference/reshift/plot/: index.html
reference/reshift/preprocessing/: index.html
reference/reshift/rolling/: index.html
reference/scripts/: index.html
reference/scripts/gen_ref_pages/: index.html
reference/tests/: index.html
reference/tests/conftest/: index.html
reference/tests/test_chdsubid/: index.html
reference/tests/test_datasets/: index.html
reference/tests/test_dmd/: index.html
reference/tests/test_metrics/: index.html
reference/tests/test_plot/: index.html
reference/tests/test_preprocessing/: index.html
reference/tests/test_rolling/: index.html
reshift/: chdsubid.py  datasets.py  dmd.py  metrics.py
scripts/: __init__.py  gen_ref_pages.py
search/: search_index.json
tests/: conftest.py  test_chdsubid.py  test_datasets.py  test_dmd.py  test_metrics.py  test_plot.py  test_preprocessing.py  test_rolling.py
