[project]
name = "odmd-subid-cpd"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib<4.0.0",
    "numpy<3.0.0",
    "pandas<3.0.0",
    "requests>=2.32.4",
    "river",
    "scipy<2.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
examples = [
    "bayesian-optimization~=1.4.3",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "pydmd>=2025.8.1",
]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--ignore=scripts/",
    "--verbose",
    "-ra",
    "-m not datasets and not slow",
    "--color=yes",
    "--junitxml=reports/junit/junit.xml",
    "--html=reports/junit/report/index.html",
    "--cov=.",
    "--cov-report=xml:reports/coverage/coverage.xml",
    "--cov-report=html:reports/coverage/report",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "NUMBER",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]
norecursedirs = ["examples", "vendor", ".*"]

[tool.ty.environment]
extra-paths = ["vendor/river"]

[tool.ruff]
line-length = 79
extend-exclude = ["vendor"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.uv.sources]
river = { path = "vendor/river", editable = true }

[dependency-groups]
app = ["streamlit<2.0.0"]
dev = [
    "commitizen>=4.16.3",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
    "types-cachetools>=7.0.0.20260518",
    "types-colorama>=0.4.15.20260508",
    "types-decorator>=5.2.0.20260519",
    "types-defusedxml>=0.7.0.20260504",
    "types-jsonschema>=4.26.0.20260518",
    "types-markdown>=3.10.2.20260518",
    "types-pexpect>=4.9.0.20260518",
    "types-protobuf>=7.34.1.20260518",
    "types-pycurl>=7.46.0.20260618",
    "types-pygments>=2.20.0.20260518",
    "types-python-dateutil>=2.9.0.20260518",
    "types-pytz>=2026.2.0.20260518",
    "types-pyyaml>=6.0.12.20260518",
    "types-tensorflow>=2.18.0.20260518",
    "types-toml>=0.10.8.20260518",
    "types-tqdm>=4.68.0.20260608",
]
docs = [
    "black<30.0.0",
    "markdown-exec<2.0.0",
    "mkdocs-charts-plugin>=0.0.12",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin<10.0.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material<10.0.0",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings-python<2.0.0",
]
