[project]
name = "odmd-subid-cpd"
version = "4.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib<4.0.0",
    "numpy<3.0.0",
    "pandas<3.0.0",
    "requests>=2.32.4",
    "river",
    "scipy<2.0.0",
    "tqdm>=4.67.1",
]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--ignore=scripts/",
    "--verbose",
    "-ra",
    "-m not datasets and not slow",
    "--color=yes",
    "--junitxml=reports/junit/junit.xml",
    "--html=reports/junit/report/index.html",
    "--cov=.",
    "--cov-report=xml:reports/coverage/coverage.xml",
    "--cov-report=html:reports/coverage/report",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "NUMBER",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]
norecursedirs = ["examples", "vendor", ".*"]

[tool.ty.environment]
extra-paths = ["vendor/river"]

[tool.ruff]
line-length = 79
extend-exclude = ["vendor"]
lint.select = ["ALL"]
lint.ignore = [
    # === Permanent: inappropriate for numerical/research code ===
    # TODO(MarekWadinger): migrate to np.random.Generator only when reference
    # data is regenerated. np.random.default_rng(seed) yields a different stream
    # than np.random.seed()+np.random.normal(), so migrating now would change the
    # seeded synthetic datasets and invalidate committed results/figures.
    "NPY002",  # legacy RNG kept for reproducibility (see TODO above)
    "N802",    # function names use math notation (e.g. C(), A())
    "N803",    # argument names use math notation (X, U, Y)
    "N806",    # local vars use math notation (X, A, U, S, V)
    "N816",    # mixed-case math vars at module scope
    "ERA001",  # commented-out code kept as research scratch
    "E501",    # code line length (replaced by W505)
    "FBT001",  # boolean positional arg in function definition
    "FBT002",  # boolean default positional arg
    "FBT003",  # boolean positional value in call
    "FIX002",  # line contains TODO (TODOs are tracked via issues)
    "S101",    # assert used for runtime invariants
    "PLR2004", # magic-value comparison (numeric constants are inherent)
    "PLR0912", # too many branches (algorithmic code)
    "PLR0913", # too many arguments (model/config constructors)
    "PLR0915", # too many statements (algorithmic code)
    "C901",    # function too complex (algorithmic code)
    "INP001",  # implicit namespace package (no __init__ needed)
    "PLC0415", # intentional lazy imports (optional/heavy deps)
]
lint.pycodestyle.max-doc-length = 120
lint.pycodestyle.max-line-length = 79

# T201/T203 (print): prints are the output medium in notebooks and the
# benchmark report script — allowed there, enforced everywhere else.
# SLF001: analysis notebooks legitimately inspect river decomposition
# internals (_svd, _S, _U, _Y) that have no public accessor.
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["T201", "T203", "SLF001"]
"benchmarks/*" = ["T201", "T203"]

# Codebase uses Google-style docstrings (Args:/Returns:/Raises:).
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.uv]
# Sync all dev-time groups by default so `uv run ruff`/`ty` (pre-commit)
# resolve every import. Groups aren't published, so pip users are unaffected.
default-groups = ["dev", "app", "docs", "examples"]

[tool.uv.sources]
river = { path = "vendor/river", editable = true }

[dependency-groups]
app = ["streamlit<2.0.0"]
examples = [
    "bayesian-optimization~=1.4.3",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "pydmd>=2025.8.1",
]
dev = [
    "commitizen>=4.16.3",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
    "types-cachetools>=7.0.0.20260518",
    "types-colorama>=0.4.15.20260508",
    "types-decorator>=5.2.0.20260519",
    "types-defusedxml>=0.7.0.20260504",
    "types-jsonschema>=4.26.0.20260518",
    "types-markdown>=3.10.2.20260518",
    "types-pexpect>=4.9.0.20260518",
    "types-protobuf>=7.34.1.20260518",
    "types-pycurl>=7.46.0.20260618",
    "types-pygments>=2.20.0.20260518",
    "types-python-dateutil>=2.9.0.20260518",
    "types-pytz>=2026.2.0.20260518",
    "types-pyyaml>=6.0.12.20260518",
    "types-tensorflow>=2.18.0.20260518",
    "types-toml>=0.10.8.20260518",
    "types-tqdm>=4.68.0.20260608",
]
docs = [
    "black<30.0.0",
    "markdown-exec<2.0.0",
    "mkdocs-charts-plugin>=0.0.12",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin<10.0.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material<10.0.0",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings-python<2.0.0",
]

[tool.commitizen]
# Why cz_customize and not cz_conventional_commits: the built-in conventional cz
# HARDCODES commit_parser/changelog_pattern as class attributes (feat|fix|refactor|
# perf only), so the [tool.commitizen] commit_parser key is silently ignored and
# `docs` can never reach the changelog. cz_customize is the only supported way to
# add it (see https://commitizen-tools.github.io/commitizen/customization/).
name = "cz_customize"
tag_format = "v$version"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = false
# No changelog_start_rev: the pre-v2.0.0 CAPS convention (ADD:/UPDATE:/FIX:) does
# not match the case-sensitive parser below, so that era is auto-excluded from
# generation and is instead captured by a hand-curated v1.0.0 section appended to
# CHANGELOG.md. Bumps are incremental and never rewrite that manual section.

[tool.commitizen.customize]
# bump_pattern/bump_map are copied verbatim from commitizen's own defaults, so
# SemVer bumping is identical to standard conventional commits. DEPRECATION NOTE:
# commitizen has deprecated these module defaults in favour of BUMP_PATTERN/BUMP_MAP
# and will remove them in v5 -- re-check this block against upstream on the next
# major commitizen upgrade.
bump_pattern = "^((BREAKING[\\-\\ ]CHANGE|\\w+)(\\(.+\\))?!?):"
bump_map = { "^.+!$" = "MAJOR", "^BREAKING[\\-\\ ]CHANGE" = "MAJOR", "^feat" = "MINOR", "^fix" = "PATCH", "^refactor" = "PATCH", "^perf" = "PATCH" }
# Changelog: standard types + docs (the only addition over the built-in).
changelog_pattern = "^(feat|fix|perf|refactor|docs)(\\(.+\\))?(!)?:"
commit_parser = "^(?P<change_type>feat|fix|perf|refactor|docs)(?:\\((?P<scope>[^()\r\n]*)\\)|\\()?(?P<breaking>!)?:\\s(?P<message>.*)?"
change_type_order = [
    "BREAKING CHANGE",
    "Features",
    "Fixes",
    "Performance",
    "Refactor",
    "Docs",
]
# schema_pattern restores `cz check` commit-msg validation (cz_customize without it
# accepts ANY message). Full conventional vocabulary, copied from commitizen's
# built-in -- intentionally broader than the changelog set above (chore/ci/test/etc.
# are valid commits even though they don't appear in the changelog).
schema_pattern = '(?s)(build|bump|chore|ci|docs|feat|fix|perf|refactor|revert|style|test)(\(\S+\))?!?: ([^\n\r]+)((\n\n.*)|(\s*))?$'

[tool.commitizen.customize.change_type_map]
feat = "Features"
fix = "Fixes"
perf = "Performance"
refactor = "Refactor"
docs = "Docs"
